lab3/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list single_statement
Rule 3     statement_list -> single_statement
Rule 4     statement_list -> NEWLINE
Rule 5     single_statement -> declaration ENDSTR NEWLINE
Rule 6     single_statement -> setting ENDSTR NEWLINE
Rule 7     single_statement -> if
Rule 8     single_statement -> dowhile
Rule 9     single_statement -> function
Rule 10    single_statement -> callfunc ENDSTR NEWLINE
Rule 11    single_statement -> cmd ENDSTR NEWLINE
Rule 12    single_statement -> ENDSTR NEWLINE
Rule 13    declaration -> type var
Rule 14    type -> INT
Rule 15    type -> BOOL
Rule 16    type -> SHORT INT
Rule 17    type -> SHORT
Rule 18    var -> variable
Rule 19    var -> setting
Rule 20    var -> var COMMA var
Rule 21    setting -> variable SET expr
Rule 22    expr -> variable
Rule 23    expr -> const
Rule 24    expr -> math_expr
Rule 25    expr -> callfunc
Rule 26    expr -> cmd
Rule 27    expr -> OPBR expr CLBR
Rule 28    setting -> variable SET setarr
Rule 29    type -> vectorof
Rule 30    vectorof -> VECTOROF type
Rule 31    setarr -> CUOPBR setarr CUCLBR
Rule 32    setarr -> setarr COMMA setarr
Rule 33    setarr -> CUOPBR exprarr CUCLBR
Rule 34    exprarr -> exprarr COMMA exprarr
Rule 35    exprarr -> expr
Rule 36    const -> digit
Rule 37    const -> bool
Rule 38    const -> sizeof
Rule 39    variable -> VARIABLE
Rule 40    variable -> VARIABLE index
Rule 41    index -> SQOPBR expr SQCLBR
Rule 42    index -> index index
Rule 43    sizeof -> SIZEOF OPBR type CLBR
Rule 44    sizeof -> SIZEOF OPBR variable CLBR
Rule 45    bool -> TRUE
Rule 46    bool -> FALSE
Rule 47    bool -> UNDEFINED
Rule 48    digit -> INTTYP
Rule 49    digit -> SHORTTYP
Rule 50    math_expr -> expr SUB expr
Rule 51    math_expr -> expr ADD expr
Rule 52    math_expr -> expr VERTBAR expr LARGER
Rule 53    math_expr -> expr VERTBAR expr SMALLER
Rule 54    math_expr -> expr AND expr
Rule 55    math_expr -> expr OR expr
Rule 56    math_expr -> expr NOT AND expr
Rule 57    math_expr -> expr NOT OR expr
Rule 58    callfunc -> VARIABLE OPBR varlist CLBR
Rule 59    varlist -> variable
Rule 60    varlist -> const
Rule 61    varlist -> varlist COMMA varlist
Rule 62    if -> IF expr THEN NEWLINE statement_gr ELSE NEWLINE statement_gr
Rule 63    if -> IF expr THEN NEWLINE statement_gr ELSE ENDSTR NEWLINE
Rule 64    if -> IF expr THEN NEWLINE statement_gr error
Rule 65    if -> IF expr error
Rule 66    statement_gr -> BEGIN NEWLINE statement_list END NEWLINE
Rule 67    statement_gr -> single_statement
Rule 68    dowhile -> DO NEWLINE statement_gr WHILE expr ENDSTR NEWLINE
Rule 69    dowhile -> DO NEWLINE error
Rule 70    function -> FUNCTION VARIABLE OPBR arrtype CLBR NEWLINE statement_gr RETURN expr ENDSTR NEWLINE
Rule 71    arrtype -> type VARIABLE
Rule 72    arrtype -> arrtype COMMA arrtype
Rule 73    cmd -> MOVE
Rule 74    cmd -> MOVE dir
Rule 75    cmd -> RIGHT
Rule 76    cmd -> LEFT
Rule 77    cmd -> LMS
Rule 78    dir -> RIGHT
Rule 79    dir -> LEFT

Terminals, with rules where they appear

ADD                  : 51
AND                  : 54 56
BEGIN                : 66
BOOL                 : 15
CLBR                 : 27 43 44 58 70
COMMA                : 20 32 34 61 72
CUCLBR               : 31 33
CUOPBR               : 31 33
DO                   : 68 69
ELSE                 : 62 63
END                  : 66
ENDSTR               : 5 6 10 11 12 63 68 70
FALSE                : 46
FUNCTION             : 70
IF                   : 62 63 64 65
INT                  : 14 16
INTTYP               : 48
LARGER               : 52
LEFT                 : 76 79
LMS                  : 77
MOVE                 : 73 74
NEWLINE              : 4 5 6 10 11 12 62 62 63 63 64 66 66 68 68 69 70 70
NOT                  : 56 57
OPBR                 : 27 43 44 58 70
OR                   : 55 57
RETURN               : 70
RIGHT                : 75 78
SET                  : 21 28
SHORT                : 16 17
SHORTTYP             : 49
SIZEOF               : 43 44
SMALLER              : 53
SQCLBR               : 41
SQOPBR               : 41
SUB                  : 50
THEN                 : 62 63 64
TRUE                 : 45
UNDEFINED            : 47
VARIABLE             : 39 40 58 70 71
VECTOROF             : 30
VERTBAR              : 52 53
WHILE                : 68
error                : 64 65 69

Nonterminals, with rules where they appear

arrtype              : 70 72 72
bool                 : 37
callfunc             : 10 25
cmd                  : 11 26
const                : 23 60
declaration          : 5
digit                : 36
dir                  : 74
dowhile              : 8
expr                 : 21 27 35 41 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 62 63 64 65 68 70
exprarr              : 33 34 34
function             : 9
if                   : 7
index                : 40 42 42
math_expr            : 24
program              : 0
setarr               : 28 31 32 32
setting              : 6 19
single_statement     : 2 3 67
sizeof               : 38
statement_gr         : 62 62 63 64 68 70
statement_list       : 1 2 66
type                 : 13 30 43 71
var                  : 13 20 20
variable             : 18 21 22 28 44 59
varlist              : 58 61 61
vectorof             : 29

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list single_statement
    (3) statement_list -> . single_statement
    (4) statement_list -> . NEWLINE
    (5) single_statement -> . declaration ENDSTR NEWLINE
    (6) single_statement -> . setting ENDSTR NEWLINE
    (7) single_statement -> . if
    (8) single_statement -> . dowhile
    (9) single_statement -> . function
    (10) single_statement -> . callfunc ENDSTR NEWLINE
    (11) single_statement -> . cmd ENDSTR NEWLINE
    (12) single_statement -> . ENDSTR NEWLINE
    (13) declaration -> . type var
    (21) setting -> . variable SET expr
    (28) setting -> . variable SET setarr
    (62) if -> . IF expr THEN NEWLINE statement_gr ELSE NEWLINE statement_gr
    (63) if -> . IF expr THEN NEWLINE statement_gr ELSE ENDSTR NEWLINE
    (64) if -> . IF expr THEN NEWLINE statement_gr error
    (65) if -> . IF expr error
    (68) dowhile -> . DO NEWLINE statement_gr WHILE expr ENDSTR NEWLINE
    (69) dowhile -> . DO NEWLINE error
    (70) function -> . FUNCTION VARIABLE OPBR arrtype CLBR NEWLINE statement_gr RETURN expr ENDSTR NEWLINE
    (58) callfunc -> . VARIABLE OPBR varlist CLBR
    (73) cmd -> . MOVE
    (74) cmd -> . MOVE dir
    (75) cmd -> . RIGHT
    (76) cmd -> . LEFT
    (77) cmd -> . LMS
    (14) type -> . INT
    (15) type -> . BOOL
    (16) type -> . SHORT INT
    (17) type -> . SHORT
    (29) type -> . vectorof
    (39) variable -> . VARIABLE
    (40) variable -> . VARIABLE index
    (30) vectorof -> . VECTOROF type

    NEWLINE         shift and go to state 4
    ENDSTR          shift and go to state 6
    IF              shift and go to state 15
    DO              shift and go to state 16
    FUNCTION        shift and go to state 17
    VARIABLE        shift and go to state 18
    MOVE            shift and go to state 19
    RIGHT           shift and go to state 20
    LEFT            shift and go to state 21
    LMS             shift and go to state 22
    INT             shift and go to state 23
    BOOL            shift and go to state 24
    SHORT           shift and go to state 25
    VECTOROF        shift and go to state 27

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    single_statement               shift and go to state 3
    declaration                    shift and go to state 5
    setting                        shift and go to state 7
    if                             shift and go to state 8
    dowhile                        shift and go to state 9
    function                       shift and go to state 10
    callfunc                       shift and go to state 11
    cmd                            shift and go to state 12
    type                           shift and go to state 13
    variable                       shift and go to state 14
    vectorof                       shift and go to state 26

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . single_statement
    (5) single_statement -> . declaration ENDSTR NEWLINE
    (6) single_statement -> . setting ENDSTR NEWLINE
    (7) single_statement -> . if
    (8) single_statement -> . dowhile
    (9) single_statement -> . function
    (10) single_statement -> . callfunc ENDSTR NEWLINE
    (11) single_statement -> . cmd ENDSTR NEWLINE
    (12) single_statement -> . ENDSTR NEWLINE
    (13) declaration -> . type var
    (21) setting -> . variable SET expr
    (28) setting -> . variable SET setarr
    (62) if -> . IF expr THEN NEWLINE statement_gr ELSE NEWLINE statement_gr
    (63) if -> . IF expr THEN NEWLINE statement_gr ELSE ENDSTR NEWLINE
    (64) if -> . IF expr THEN NEWLINE statement_gr error
    (65) if -> . IF expr error
    (68) dowhile -> . DO NEWLINE statement_gr WHILE expr ENDSTR NEWLINE
    (69) dowhile -> . DO NEWLINE error
    (70) function -> . FUNCTION VARIABLE OPBR arrtype CLBR NEWLINE statement_gr RETURN expr ENDSTR NEWLINE
    (58) callfunc -> . VARIABLE OPBR varlist CLBR
    (73) cmd -> . MOVE
    (74) cmd -> . MOVE dir
    (75) cmd -> . RIGHT
    (76) cmd -> . LEFT
    (77) cmd -> . LMS
    (14) type -> . INT
    (15) type -> . BOOL
    (16) type -> . SHORT INT
    (17) type -> . SHORT
    (29) type -> . vectorof
    (39) variable -> . VARIABLE
    (40) variable -> . VARIABLE index
    (30) vectorof -> . VECTOROF type

    $end            reduce using rule 1 (program -> statement_list .)
    ENDSTR          shift and go to state 6
    IF              shift and go to state 15
    DO              shift and go to state 16
    FUNCTION        shift and go to state 17
    VARIABLE        shift and go to state 18
    MOVE            shift and go to state 19
    RIGHT           shift and go to state 20
    LEFT            shift and go to state 21
    LMS             shift and go to state 22
    INT             shift and go to state 23
    BOOL            shift and go to state 24
    SHORT           shift and go to state 25
    VECTOROF        shift and go to state 27

    single_statement               shift and go to state 28
    declaration                    shift and go to state 5
    setting                        shift and go to state 7
    if                             shift and go to state 8
    dowhile                        shift and go to state 9
    function                       shift and go to state 10
    callfunc                       shift and go to state 11
    cmd                            shift and go to state 12
    type                           shift and go to state 13
    variable                       shift and go to state 14
    vectorof                       shift and go to state 26

state 3

    (3) statement_list -> single_statement .

    ENDSTR          reduce using rule 3 (statement_list -> single_statement .)
    IF              reduce using rule 3 (statement_list -> single_statement .)
    DO              reduce using rule 3 (statement_list -> single_statement .)
    FUNCTION        reduce using rule 3 (statement_list -> single_statement .)
    VARIABLE        reduce using rule 3 (statement_list -> single_statement .)
    MOVE            reduce using rule 3 (statement_list -> single_statement .)
    RIGHT           reduce using rule 3 (statement_list -> single_statement .)
    LEFT            reduce using rule 3 (statement_list -> single_statement .)
    LMS             reduce using rule 3 (statement_list -> single_statement .)
    INT             reduce using rule 3 (statement_list -> single_statement .)
    BOOL            reduce using rule 3 (statement_list -> single_statement .)
    SHORT           reduce using rule 3 (statement_list -> single_statement .)
    VECTOROF        reduce using rule 3 (statement_list -> single_statement .)
    $end            reduce using rule 3 (statement_list -> single_statement .)
    END             reduce using rule 3 (statement_list -> single_statement .)


state 4

    (4) statement_list -> NEWLINE .

    ENDSTR          reduce using rule 4 (statement_list -> NEWLINE .)
    IF              reduce using rule 4 (statement_list -> NEWLINE .)
    DO              reduce using rule 4 (statement_list -> NEWLINE .)
    FUNCTION        reduce using rule 4 (statement_list -> NEWLINE .)
    VARIABLE        reduce using rule 4 (statement_list -> NEWLINE .)
    MOVE            reduce using rule 4 (statement_list -> NEWLINE .)
    RIGHT           reduce using rule 4 (statement_list -> NEWLINE .)
    LEFT            reduce using rule 4 (statement_list -> NEWLINE .)
    LMS             reduce using rule 4 (statement_list -> NEWLINE .)
    INT             reduce using rule 4 (statement_list -> NEWLINE .)
    BOOL            reduce using rule 4 (statement_list -> NEWLINE .)
    SHORT           reduce using rule 4 (statement_list -> NEWLINE .)
    VECTOROF        reduce using rule 4 (statement_list -> NEWLINE .)
    $end            reduce using rule 4 (statement_list -> NEWLINE .)
    END             reduce using rule 4 (statement_list -> NEWLINE .)


state 5

    (5) single_statement -> declaration . ENDSTR NEWLINE

    ENDSTR          shift and go to state 29


state 6

    (12) single_statement -> ENDSTR . NEWLINE

    NEWLINE         shift and go to state 30


state 7

    (6) single_statement -> setting . ENDSTR NEWLINE

    ENDSTR          shift and go to state 31


state 8

    (7) single_statement -> if .

    ENDSTR          reduce using rule 7 (single_statement -> if .)
    IF              reduce using rule 7 (single_statement -> if .)
    DO              reduce using rule 7 (single_statement -> if .)
    FUNCTION        reduce using rule 7 (single_statement -> if .)
    VARIABLE        reduce using rule 7 (single_statement -> if .)
    MOVE            reduce using rule 7 (single_statement -> if .)
    RIGHT           reduce using rule 7 (single_statement -> if .)
    LEFT            reduce using rule 7 (single_statement -> if .)
    LMS             reduce using rule 7 (single_statement -> if .)
    INT             reduce using rule 7 (single_statement -> if .)
    BOOL            reduce using rule 7 (single_statement -> if .)
    SHORT           reduce using rule 7 (single_statement -> if .)
    VECTOROF        reduce using rule 7 (single_statement -> if .)
    $end            reduce using rule 7 (single_statement -> if .)
    WHILE           reduce using rule 7 (single_statement -> if .)
    ELSE            reduce using rule 7 (single_statement -> if .)
    error           reduce using rule 7 (single_statement -> if .)
    END             reduce using rule 7 (single_statement -> if .)
    RETURN          reduce using rule 7 (single_statement -> if .)


state 9

    (8) single_statement -> dowhile .

    ENDSTR          reduce using rule 8 (single_statement -> dowhile .)
    IF              reduce using rule 8 (single_statement -> dowhile .)
    DO              reduce using rule 8 (single_statement -> dowhile .)
    FUNCTION        reduce using rule 8 (single_statement -> dowhile .)
    VARIABLE        reduce using rule 8 (single_statement -> dowhile .)
    MOVE            reduce using rule 8 (single_statement -> dowhile .)
    RIGHT           reduce using rule 8 (single_statement -> dowhile .)
    LEFT            reduce using rule 8 (single_statement -> dowhile .)
    LMS             reduce using rule 8 (single_statement -> dowhile .)
    INT             reduce using rule 8 (single_statement -> dowhile .)
    BOOL            reduce using rule 8 (single_statement -> dowhile .)
    SHORT           reduce using rule 8 (single_statement -> dowhile .)
    VECTOROF        reduce using rule 8 (single_statement -> dowhile .)
    $end            reduce using rule 8 (single_statement -> dowhile .)
    WHILE           reduce using rule 8 (single_statement -> dowhile .)
    ELSE            reduce using rule 8 (single_statement -> dowhile .)
    error           reduce using rule 8 (single_statement -> dowhile .)
    END             reduce using rule 8 (single_statement -> dowhile .)
    RETURN          reduce using rule 8 (single_statement -> dowhile .)


state 10

    (9) single_statement -> function .

    ENDSTR          reduce using rule 9 (single_statement -> function .)
    IF              reduce using rule 9 (single_statement -> function .)
    DO              reduce using rule 9 (single_statement -> function .)
    FUNCTION        reduce using rule 9 (single_statement -> function .)
    VARIABLE        reduce using rule 9 (single_statement -> function .)
    MOVE            reduce using rule 9 (single_statement -> function .)
    RIGHT           reduce using rule 9 (single_statement -> function .)
    LEFT            reduce using rule 9 (single_statement -> function .)
    LMS             reduce using rule 9 (single_statement -> function .)
    INT             reduce using rule 9 (single_statement -> function .)
    BOOL            reduce using rule 9 (single_statement -> function .)
    SHORT           reduce using rule 9 (single_statement -> function .)
    VECTOROF        reduce using rule 9 (single_statement -> function .)
    $end            reduce using rule 9 (single_statement -> function .)
    WHILE           reduce using rule 9 (single_statement -> function .)
    ELSE            reduce using rule 9 (single_statement -> function .)
    error           reduce using rule 9 (single_statement -> function .)
    END             reduce using rule 9 (single_statement -> function .)
    RETURN          reduce using rule 9 (single_statement -> function .)


state 11

    (10) single_statement -> callfunc . ENDSTR NEWLINE

    ENDSTR          shift and go to state 32


state 12

    (11) single_statement -> cmd . ENDSTR NEWLINE

    ENDSTR          shift and go to state 33


state 13

    (13) declaration -> type . var
    (18) var -> . variable
    (19) var -> . setting
    (20) var -> . var COMMA var
    (39) variable -> . VARIABLE
    (40) variable -> . VARIABLE index
    (21) setting -> . variable SET expr
    (28) setting -> . variable SET setarr

    VARIABLE        shift and go to state 37

    var                            shift and go to state 34
    variable                       shift and go to state 35
    setting                        shift and go to state 36

state 14

    (21) setting -> variable . SET expr
    (28) setting -> variable . SET setarr

    SET             shift and go to state 38


state 15

    (62) if -> IF . expr THEN NEWLINE statement_gr ELSE NEWLINE statement_gr
    (63) if -> IF . expr THEN NEWLINE statement_gr ELSE ENDSTR NEWLINE
    (64) if -> IF . expr THEN NEWLINE statement_gr error
    (65) if -> IF . expr error
    (22) expr -> . variable
    (23) expr -> . const
    (24) expr -> . math_expr
    (25) expr -> . callfunc
    (26) expr -> . cmd
    (27) expr -> . OPBR expr CLBR
    (39) variable -> . VARIABLE
    (40) variable -> . VARIABLE index
    (36) const -> . digit
    (37) const -> . bool
    (38) const -> . sizeof
    (50) math_expr -> . expr SUB expr
    (51) math_expr -> . expr ADD expr
    (52) math_expr -> . expr VERTBAR expr LARGER
    (53) math_expr -> . expr VERTBAR expr SMALLER
    (54) math_expr -> . expr AND expr
    (55) math_expr -> . expr OR expr
    (56) math_expr -> . expr NOT AND expr
    (57) math_expr -> . expr NOT OR expr
    (58) callfunc -> . VARIABLE OPBR varlist CLBR
    (73) cmd -> . MOVE
    (74) cmd -> . MOVE dir
    (75) cmd -> . RIGHT
    (76) cmd -> . LEFT
    (77) cmd -> . LMS
    (48) digit -> . INTTYP
    (49) digit -> . SHORTTYP
    (45) bool -> . TRUE
    (46) bool -> . FALSE
    (47) bool -> . UNDEFINED
    (43) sizeof -> . SIZEOF OPBR type CLBR
    (44) sizeof -> . SIZEOF OPBR variable CLBR

    OPBR            shift and go to state 45
    VARIABLE        shift and go to state 46
    MOVE            shift and go to state 19
    RIGHT           shift and go to state 20
    LEFT            shift and go to state 21
    LMS             shift and go to state 22
    INTTYP          shift and go to state 50
    SHORTTYP        shift and go to state 51
    TRUE            shift and go to state 52
    FALSE           shift and go to state 53
    UNDEFINED       shift and go to state 54
    SIZEOF          shift and go to state 55

    expr                           shift and go to state 39
    variable                       shift and go to state 40
    const                          shift and go to state 41
    math_expr                      shift and go to state 42
    callfunc                       shift and go to state 43
    cmd                            shift and go to state 44
    digit                          shift and go to state 47
    bool                           shift and go to state 48
    sizeof                         shift and go to state 49

state 16

    (68) dowhile -> DO . NEWLINE statement_gr WHILE expr ENDSTR NEWLINE
    (69) dowhile -> DO . NEWLINE error

    NEWLINE         shift and go to state 56


state 17

    (70) function -> FUNCTION . VARIABLE OPBR arrtype CLBR NEWLINE statement_gr RETURN expr ENDSTR NEWLINE

    VARIABLE        shift and go to state 57


state 18

    (58) callfunc -> VARIABLE . OPBR varlist CLBR
    (39) variable -> VARIABLE .
    (40) variable -> VARIABLE . index
    (41) index -> . SQOPBR expr SQCLBR
    (42) index -> . index index

    OPBR            shift and go to state 58
    SET             reduce using rule 39 (variable -> VARIABLE .)
    SQOPBR          shift and go to state 60

    index                          shift and go to state 59

state 19

    (73) cmd -> MOVE .
    (74) cmd -> MOVE . dir
    (78) dir -> . RIGHT
    (79) dir -> . LEFT

    ENDSTR          reduce using rule 73 (cmd -> MOVE .)
    THEN            reduce using rule 73 (cmd -> MOVE .)
    error           reduce using rule 73 (cmd -> MOVE .)
    SUB             reduce using rule 73 (cmd -> MOVE .)
    ADD             reduce using rule 73 (cmd -> MOVE .)
    VERTBAR         reduce using rule 73 (cmd -> MOVE .)
    AND             reduce using rule 73 (cmd -> MOVE .)
    OR              reduce using rule 73 (cmd -> MOVE .)
    NOT             reduce using rule 73 (cmd -> MOVE .)
    COMMA           reduce using rule 73 (cmd -> MOVE .)
    CLBR            reduce using rule 73 (cmd -> MOVE .)
    SQCLBR          reduce using rule 73 (cmd -> MOVE .)
    CUCLBR          reduce using rule 73 (cmd -> MOVE .)
    LARGER          reduce using rule 73 (cmd -> MOVE .)
    SMALLER         reduce using rule 73 (cmd -> MOVE .)
    RIGHT           shift and go to state 62
    LEFT            shift and go to state 63

    dir                            shift and go to state 61

state 20

    (75) cmd -> RIGHT .

    ENDSTR          reduce using rule 75 (cmd -> RIGHT .)
    THEN            reduce using rule 75 (cmd -> RIGHT .)
    error           reduce using rule 75 (cmd -> RIGHT .)
    SUB             reduce using rule 75 (cmd -> RIGHT .)
    ADD             reduce using rule 75 (cmd -> RIGHT .)
    VERTBAR         reduce using rule 75 (cmd -> RIGHT .)
    AND             reduce using rule 75 (cmd -> RIGHT .)
    OR              reduce using rule 75 (cmd -> RIGHT .)
    NOT             reduce using rule 75 (cmd -> RIGHT .)
    COMMA           reduce using rule 75 (cmd -> RIGHT .)
    CLBR            reduce using rule 75 (cmd -> RIGHT .)
    SQCLBR          reduce using rule 75 (cmd -> RIGHT .)
    CUCLBR          reduce using rule 75 (cmd -> RIGHT .)
    LARGER          reduce using rule 75 (cmd -> RIGHT .)
    SMALLER         reduce using rule 75 (cmd -> RIGHT .)


state 21

    (76) cmd -> LEFT .

    ENDSTR          reduce using rule 76 (cmd -> LEFT .)
    THEN            reduce using rule 76 (cmd -> LEFT .)
    error           reduce using rule 76 (cmd -> LEFT .)
    SUB             reduce using rule 76 (cmd -> LEFT .)
    ADD             reduce using rule 76 (cmd -> LEFT .)
    VERTBAR         reduce using rule 76 (cmd -> LEFT .)
    AND             reduce using rule 76 (cmd -> LEFT .)
    OR              reduce using rule 76 (cmd -> LEFT .)
    NOT             reduce using rule 76 (cmd -> LEFT .)
    COMMA           reduce using rule 76 (cmd -> LEFT .)
    CLBR            reduce using rule 76 (cmd -> LEFT .)
    SQCLBR          reduce using rule 76 (cmd -> LEFT .)
    CUCLBR          reduce using rule 76 (cmd -> LEFT .)
    LARGER          reduce using rule 76 (cmd -> LEFT .)
    SMALLER         reduce using rule 76 (cmd -> LEFT .)


state 22

    (77) cmd -> LMS .

    ENDSTR          reduce using rule 77 (cmd -> LMS .)
    THEN            reduce using rule 77 (cmd -> LMS .)
    error           reduce using rule 77 (cmd -> LMS .)
    SUB             reduce using rule 77 (cmd -> LMS .)
    ADD             reduce using rule 77 (cmd -> LMS .)
    VERTBAR         reduce using rule 77 (cmd -> LMS .)
    AND             reduce using rule 77 (cmd -> LMS .)
    OR              reduce using rule 77 (cmd -> LMS .)
    NOT             reduce using rule 77 (cmd -> LMS .)
    COMMA           reduce using rule 77 (cmd -> LMS .)
    CLBR            reduce using rule 77 (cmd -> LMS .)
    SQCLBR          reduce using rule 77 (cmd -> LMS .)
    CUCLBR          reduce using rule 77 (cmd -> LMS .)
    LARGER          reduce using rule 77 (cmd -> LMS .)
    SMALLER         reduce using rule 77 (cmd -> LMS .)


state 23

    (14) type -> INT .

    VARIABLE        reduce using rule 14 (type -> INT .)
    CLBR            reduce using rule 14 (type -> INT .)


state 24

    (15) type -> BOOL .

    VARIABLE        reduce using rule 15 (type -> BOOL .)
    CLBR            reduce using rule 15 (type -> BOOL .)


state 25

    (16) type -> SHORT . INT
    (17) type -> SHORT .

    INT             shift and go to state 64
    VARIABLE        reduce using rule 17 (type -> SHORT .)
    CLBR            reduce using rule 17 (type -> SHORT .)


state 26

    (29) type -> vectorof .

    VARIABLE        reduce using rule 29 (type -> vectorof .)
    CLBR            reduce using rule 29 (type -> vectorof .)


state 27

    (30) vectorof -> VECTOROF . type
    (14) type -> . INT
    (15) type -> . BOOL
    (16) type -> . SHORT INT
    (17) type -> . SHORT
    (29) type -> . vectorof
    (30) vectorof -> . VECTOROF type

    INT             shift and go to state 23
    BOOL            shift and go to state 24
    SHORT           shift and go to state 25
    VECTOROF        shift and go to state 27

    type                           shift and go to state 65
    vectorof                       shift and go to state 26

state 28

    (2) statement_list -> statement_list single_statement .

    ENDSTR          reduce using rule 2 (statement_list -> statement_list single_statement .)
    IF              reduce using rule 2 (statement_list -> statement_list single_statement .)
    DO              reduce using rule 2 (statement_list -> statement_list single_statement .)
    FUNCTION        reduce using rule 2 (statement_list -> statement_list single_statement .)
    VARIABLE        reduce using rule 2 (statement_list -> statement_list single_statement .)
    MOVE            reduce using rule 2 (statement_list -> statement_list single_statement .)
    RIGHT           reduce using rule 2 (statement_list -> statement_list single_statement .)
    LEFT            reduce using rule 2 (statement_list -> statement_list single_statement .)
    LMS             reduce using rule 2 (statement_list -> statement_list single_statement .)
    INT             reduce using rule 2 (statement_list -> statement_list single_statement .)
    BOOL            reduce using rule 2 (statement_list -> statement_list single_statement .)
    SHORT           reduce using rule 2 (statement_list -> statement_list single_statement .)
    VECTOROF        reduce using rule 2 (statement_list -> statement_list single_statement .)
    $end            reduce using rule 2 (statement_list -> statement_list single_statement .)
    END             reduce using rule 2 (statement_list -> statement_list single_statement .)


state 29

    (5) single_statement -> declaration ENDSTR . NEWLINE

    NEWLINE         shift and go to state 66


state 30

    (12) single_statement -> ENDSTR NEWLINE .
